alignment fix

--- a/src/components/sui-button/sui-button.scss
+++ b/src/components/sui-button/sui-button.scss
@@ -4,11 +4,9 @@
   display: inline-table;
   color: #ffffff;
   border-radius: 5px;
-  // font-size: 16px;
+  vertical-align: baseline;
   font-size: inherit;
-  padding: 0.75em 20px;
-  border: 1px solid rgba(128 128 128 / 50%);
-  // height: 40px;
+  padding: 0.6em 1.2em;
   font-weight: bold;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   box-sizing: border-box;
@@ -19,12 +17,13 @@
   -moz-user-select: none; /* Firefox */
   -ms-user-select: none; /* IE10+ */
   text-align: center;
+  // border: 1px solid rgba(138 134 129 / 50%);
   box-shadow:
-    inset 1px 1px 2px rgb(255 255 255 / 64%),
+    inset 1px 1px 2px rgb(255 255 255 / 50%),
     inset -1px -1px 2px rgb(0 0 0 / 25%),
-    inset 0 0 0px 1px rgb(0 0 0 / 25%);
+    inset 0 0 0 1px rgb(0 0 0 / 25%);
 
-  line-height: 1;
+  line-height: 1.2;
 
   slot {
     display: flex;
@@ -64,6 +63,6 @@
 :host(:not([disabled]):active) {
   box-shadow:
     inset 0 0 0px 1px hsla(0 0% 50% / 25%),
-    inset 0 1px 3px rgba(0 0 0 / 80%),
+    inset 0 1px 3px rgba(0 0 0 / 75%),
     inset -1px -1px 1px rgb(255 255 255 / 25%);
 }
