--- a/src/components/sui-input/sui-input.scss
+++ b/src/components/sui-input/sui-input.scss
@@ -9,6 +9,12 @@
   -ms-user-select: none;
   /* IE10+ */
 
+  vertical-align: baseline;
+
+  slot {
+    display: block;
+  }
+
   svg {
     display: none;
   }
@@ -22,17 +28,16 @@
 :host([type='tel']),
 :host([type='url']) {
   display: inline-block;
-  // min-height: 40px;
   width: 12em;
-  line-height: 1;
-  // font-size: 16px;
   font-size: inherit;
-  padding: 0.75em .66em;
+  padding: 0.6em .66em;
   border-radius: 4px;
   box-sizing: border-box;
-  border: 1px solid rgba(138 134 129 / 50%);
+  // border: 1px solid rgba(138 134 129 / 50%);
   box-shadow:
-    -1px -1px 2px rgb(0 0 0 / 50%), 1px 1px 1px rgb(255 255 255 / 50%);
+    -1px -1px 2px -1px rgb(0 0 0 / 50%),
+    1px 1px 1px rgb(255 255 255 / 33%),
+    inset 0 0 0 1px rgba(0 0 0 / 25%);
 
   background-color: inherit;
   color: inherit;
@@ -150,10 +155,9 @@
   display: inline-table;
   color: #ffffff;
   border-radius: 5px;
-  // font-size: 16px;
+  vertical-align: baseline;
   font-size: inherit;
-  padding: 0 20px;
-  height: 40px;
+  padding: 0.6em 1.2em;
   font-weight: bold;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   box-sizing: border-box;
@@ -164,14 +168,15 @@
   -moz-user-select: none; /* Firefox */
   -ms-user-select: none; /* IE10+ */
   text-align: center;
+  // border: 1px solid rgba(138 134 129 / 50%);
   box-shadow:
-    inset 1px 1px 2px rgb(255 255 255 / 64%),
+    inset 1px 1px 2px rgb(255 255 255 / 50%),
     inset -1px -1px 2px rgb(0 0 0 / 25%),
-    inset 0 0 0px 1px rgb(0 0 0 / 25%);
+    inset 0 0 0 1px rgb(0 0 0 / 25%);
 
-  line-height: 1;
+  line-height: 1.2;
 
-  slot[name='value'] {
+  slot {
     display: flex;
     align-items: center;
     height: 100%;
@@ -185,7 +190,7 @@
   box-shadow:
     inset 1px 1px 2px rgb(255 255 255 / 65%),
     inset -1px -1px 2px rgb(0 0 0 / 25%),
-    inset 0 0 0px 1px rgb(0 0 0 / 25%),
+    inset 0 0 0 1px rgb(0 0 0 / 25%),
     inset 0 0 1em 1em hsla(0 0% 75% / 16%);
 }
 
@@ -199,7 +204,7 @@
   box-shadow:
     inset -1px -1px 2px rgb(255 255 255 / 65%),
     inset 1px 1px 2px rgb(0 0 0 / 25%),
-    inset 0 0 0px 1px rgb(0 0 0 / 25%);
+    inset 0 0 0 1px rgb(0 0 0 / 25%);
 
   filter: grayscale(1) contrast(0.25) invert(1) brightness(1.3);
 }
@@ -212,7 +217,7 @@
 :host([type='reset']:not([disabled]):active),
 :host([type='submit']:not([disabled]):active) {
   box-shadow:
-    inset 0 0 0px 1px hsla(0 0% 50% / 25%),
+    inset 0 0 0 1px hsla(0 0% 50% / 25%),
     inset 0 1px 3px rgba(0 0 0 / 80%),
     inset -1px -1px 1px rgb(255 255 255 / 25%);
 }
